--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <ul class="pokemon-list"></ul>
-    <script src="js/promise-polyfill.js"></script>
+    <!-- <script src="js/promise-polyfill.js"></script> -->
+    <!-- CDN link to the polyfill -->
+    <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"></script>
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/scripts.js"></script>
 </body>
