--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <ul class="pokemon-list"></ul>
     <!-- <script src="js/promise-polyfill.js"></script> -->
+    <div id="modal-container"></div>
+
     <!-- CDN link to the polyfill -->
     <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"></script>
     <script src="js/fetch-polyfill.js"></script>
